[gd_scene load_steps=13 format=3 uid="uid://c2kqwsup24kcx"]

[ext_resource type="Script" path="res://Scripts/BaseCar.gd" id="1_fkpbr"]
[ext_resource type="PackedScene" uid="uid://benmjny2guowm" path="res://assets/Car/Wheel.glb" id="2_sgux3"]
[ext_resource type="PackedScene" uid="uid://8sl5gmdd6o6w" path="res://assets/camera/camera_3d.tscn" id="3_km5h1"]
[ext_resource type="PackedScene" uid="uid://4y2ttyf5fj5s" path="res://assets/Car/car_colored.fbx" id="4_0ix4a"]
[ext_resource type="FontFile" uid="uid://cxi2psa1opte" path="res://assets/Font/ARCADE_N.TTF" id="5_fcxb8"]
[ext_resource type="AudioStream" uid="uid://baxyqf5btt6ea" path="res://assets/Music/pluspoint.wav" id="6_i70ph"]
[ext_resource type="AudioStream" uid="uid://cxglesw21xccw" path="res://assets/Music/minuspoint.wav" id="7_5nimg"]
[ext_resource type="AudioStream" uid="uid://by0oip24cc8lq" path="res://assets/Music/game_music.mp3" id="9_boq5x"]
[ext_resource type="AudioStream" uid="uid://d75mmitu0hb4" path="res://assets/Music/Jeremy Blake - Powerup! â™« NO COPYRIGHT 8-bit Music.mp3" id="10_yb4ij"]

[sub_resource type="BoxMesh" id="BoxMesh_aniw4"]

[sub_resource type="BoxShape3D" id="BoxShape3D_mm2gk"]
size = Vector3(1.9717, 0.963745, 1.35949)

[sub_resource type="BoxShape3D" id="BoxShape3D_nd7ma"]
size = Vector3(1.59964, 0.993591, 4.61182)

[node name="car" type="VehicleBody3D" groups=["Car"]]
transform = Transform3D(-0.961194, 0, 0.275872, 0, 1, 0, -0.275872, 0, -0.961194, 5.58211, 0.184314, 4.54346)
center_of_mass_mode = 1
center_of_mass = Vector3(0, -0.1, 0)
script = ExtResource("1_fkpbr")
STEER_LIMIT = 0.5
engine_force_value = 200

[node name="wheel_front_left" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.812, 0.331356, 1.484)
use_as_steering = true
wheel_roll_influence = 0.5
wheel_radius = 0.37
wheel_rest_length = 0.095
wheel_friction_slip = 3.0
suspension_travel = 0.357
suspension_stiffness = 30.0
suspension_max_force = 10000.0

[node name="Wheel" parent="wheel_front_left" instance=ExtResource("2_sgux3")]

[node name="wheel_front_right" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.842, 0.331356, 1.484)
use_as_steering = true
wheel_roll_influence = 0.5
wheel_radius = 0.37
wheel_rest_length = 0.095
wheel_friction_slip = 3.0
suspension_travel = 0.357
suspension_stiffness = 30.0
suspension_max_force = 10000.0

[node name="Wheel" parent="wheel_front_right" instance=ExtResource("2_sgux3")]

[node name="wheel_rear_left" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.812, 0.33315, -1.26208)
use_as_traction = true
wheel_radius = 0.37
wheel_rest_length = 0.095
wheel_friction_slip = 2.9
suspension_travel = 0.357
suspension_stiffness = 30.0
suspension_max_force = 10000.0

[node name="Wheel" parent="wheel_rear_left" instance=ExtResource("2_sgux3")]

[node name="wheel_rear_right" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.842, 0.33315, -1.26208)
use_as_traction = true
wheel_roll_influence = 0.5
wheel_radius = 0.37
wheel_rest_length = 0.095
wheel_friction_slip = 2.9
suspension_travel = 0.357
suspension_stiffness = 30.0
suspension_max_force = 10000.0

[node name="Wheel" parent="wheel_rear_right" instance=ExtResource("2_sgux3")]

[node name="look" type="Node3D" parent="."]
transform = Transform3D(1, 0, 5.96046e-08, 0, 1, 0, -5.96046e-08, 0, 1, 0, 1.74045, 0)

[node name="Camera3D" parent="look" instance=ExtResource("3_km5h1")]
transform = Transform3D(0.914438, 0.0910848, -0.394344, 6.27287e-10, 0.974347, 0.225053, 0.404726, -0.205797, 0.890979, 1.28954, 3.81382, 11.9564)
speed = 10.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(0.00610757, 0, -1.58907, 0, 1, 0, 4.72824, 0, 0.00205287, 0, 0.706462, 0)
mesh = SubResource("BoxMesh_aniw4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(-1, 0, -8.9407e-08, 0, 1, 0, 8.9407e-08, 0, -1, -0.00209904, 0.809271, -0.321129)
shape = SubResource("BoxShape3D_mm2gk")

[node name="car_colored" parent="." instance=ExtResource("4_0ix4a")]
transform = Transform3D(0.8, 0, 4.47035e-08, 0, 0.8, 0, -4.47035e-08, 0, 0.8, 0.0310841, 0, 0.530816)

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 8.9407e-08, 0, 1, 0, -8.9407e-08, 0, 1, -0.00908566, 0.705231, -0.0661592)
shape = SubResource("BoxShape3D_nd7ma")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0

[node name="FeedbackLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -21.0
offset_right = 0.5
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.928641, 2.79158e-06, 5.77569e-07, 1)
theme_override_fonts/font = ExtResource("5_fcxb8")
theme_override_font_sizes/font_size = 30

[node name="EndPopup" type="Control" parent="UI"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 87.0

[node name="ColorRect" type="ColorRect" parent="UI/EndPopup"]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -554.0
offset_top = -302.0
offset_right = 552.0
offset_bottom = 306.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.337255)

[node name="Panel" type="Panel" parent="UI/EndPopup"]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -448.0
offset_top = -253.0
offset_right = 453.0
offset_bottom = 255.0
grow_horizontal = 2
grow_vertical = 2

[node name="Message" type="RichTextLabel" parent="UI/EndPopup"]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -336.0
offset_top = -176.0
offset_right = 356.0
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("5_fcxb8")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
autowrap_mode = 2

[node name="CloseButton" type="Button" parent="UI/EndPopup"]
layout_mode = 2
anchor_left = 1.0
anchor_right = 1.0
offset_left = 396.0
offset_top = -241.0
offset_right = 438.0
offset_bottom = -204.0
grow_horizontal = 0
theme_override_colors/font_hover_pressed_color = Color(0.976471, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 21
text = "X"

[node name="pluspoint" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_i70ph")

[node name="minuspoint" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_5nimg")

[node name="BGMPLayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("9_boq5x")
volume_db = -12.0
parameters/looping = true

[node name="EndMusicPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("10_yb4ij")
volume_db = -20.0
parameters/looping = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="pressed" from="UI/EndPopup/CloseButton" to="." method="close_end_popup"]
